# tsnr

./: .gitignore  LICENSE  README.md  REGRESSION_TEST_RUNBOOK.md  Spec_add BET_and_T1-registration.md  main.py  plot_robust_z_tr_all_sessions.py  plot_tsnr_stats.py  pyproject.toml  tSNR_SPEC.md  tsnr.py
phantom_regression/: README.md
phantom_regression/derivatives_full_minus_edges/: AlbertaChildrensHospital_Basic_fMRIQASnap_2024_03_11_11_06_50__E52718S1_tsnr_stats.json  AlbertaChildrensHospital_Basic_fMRIQASnap_2026_04_02_14_26_27__E53214S1_tsnr_stats.json
phantom_regression/derivatives_patch/: AlbertaChildrensHospital_Basic_fMRIQASnap_2024_03_11_11_06_50__E52718S1_tsnr_stats.json  AlbertaChildrensHospital_Basic_fMRIQASnap_2026_04_02_14_26_27__E53214S1_tsnr_stats.json
phantom_regression/reports_full_minus_edges/: aggregated_metric_summary.csv
phantom_regression/reports_patch/: aggregated_metric_summary.csv
tests/: test_plot_tsnr_stats.py  test_tsnr.py
