[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsnr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
only-include = ["tsnr.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
