[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsnr"
version = "0.1.0"
description = "Compute fMRI tSNR maps and QA summaries for phantom and brain workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
only-include = ["tsnr.py", "plot_tsnr_stats.py", "plot_robust_z_tr_all_sessions.py"]

[project.scripts]
tsnr = "tsnr:cli"
plot-tsnr-stats = "plot_tsnr_stats:cli"
plot-robust-z-tr-all-sessions = "plot_robust_z_tr_all_sessions:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
